--- a/MVC/Views/Shared/_Layout.cshtml
+++ b/MVC/Views/Shared/_Layout.cshtml
@@ -90,7 +90,6 @@
         bottom: 0;
         width: 100%;
         margin: 0;
-        position: fixed;
         vertical-align: central;
         text-align: center;
         padding: 3px 0;
@@ -157,12 +156,11 @@
         text-transform: uppercase;
         touch-action: manipulation;
         transform: translateZ(0);
-        transition: filter .2s;
+        transition: all .2s;
         user-select: none;
         -webkit-user-select: none;
         vertical-align: middle;
         white-space: nowrap;
-        transition: transform .5s;
     }
 
     .button:after {
