--- a/MVC/Views/Home/Index.cshtml
+++ b/MVC/Views/Home/Index.cshtml
@@ -145,7 +145,8 @@
     }
 
     .jugar-button {
-        background-color: #308200
+        background-color: #308200;
+        background-color: #ff0000
     }
     .jugar-button::after {
         background-color: #7bcc1f
